fixed body overflow

--- a/css/base.css
+++ b/css/base.css
@@ -20,6 +20,10 @@
     src: url("../fonts/Montserrat-Regular.ttf");
 }
 
+* {
+    border: 1px solid red;
+}
+
 a {
     color: var(--text-grayed);
     font-family: "Monsterrat-Bold", serif;
